--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -37,6 +37,9 @@
   @include button-variant( #949494 , #e9e9e9 , #e9e9e9 );
 }
 
+.btn-send {
+  @include button-variant( #fff , #475259 , #475259 );
+}
 
 //size of btn
 
