nav  fix responsive

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -979,6 +979,8 @@
 	  	  .table td { text-align: left;    padding: 26px 30px  26px; vertical-align: baseline;}
 	  	  .width-90 {width: 90% !important;}
 	  	  
+
+	  	  .media{margin-top: 0 ; }
 	  	  .media-heading a { color: #000;   text-decoration: underline; font-size: 16px; font-weight: bold;  }
 	  	  .media-body footer { margin-top: 8px; 
 	  	  	i {font-size: 18px; margin-right: 6px; vertical-align: bottom; } 
@@ -1258,7 +1260,7 @@
 	    border: 9.5px solid #c70000;
 	    border-right: 7.5px solid transparent;
 	    left: -30px;
-	    top: 31px;
+	    top: 15px;
 	}
 
 }
