--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1476,3 +1476,128 @@
 }
 
 
+
+
+//invoice Modal
+#invoice-modal, #invoice-modal-complete {
+
+	.invoce-header {
+		margin-bottom: 20px; 
+		p {margin-bottom: 0; }
+	}
+	.modal-body {
+    
+    	padding: 15px 30px;
+	}
+
+
+	.modal-header {
+	 	    padding: 15px 26px;
+	    margin-left: -10px;
+	       margin-right: -10px;
+	}
+
+	.close {
+	     
+	    span {
+	    		font-size: 12px; 
+	    }
+	}
+	
+	.modal-content {
+	      
+	      border-radius: 0px;
+	      outline: 0;
+	      -webkit-box-shadow:none;
+	              box-shadow:none;
+	       padding: 10px; 
+	    }
+		
+		h4, h5 {color: #000 ; font-weight: bold; }
+
+		.table {
+			margin-top: 40px;
+			    margin-bottom: 35px;
+			border-collapse: separate;
+		 }
+			.table tr th.noborder {
+			  border: none;
+			  padding-top: 0px;
+			}
+
+	    .table>thead>tr>th { vertical-align: bottom; border-bottom: 0; border-top: 1px solid #ddd; border-bottom: 0;
+	    						padding: 14px 24px;
+	    						color: #000; 
+						    	&:first-child {
+									border-left: 1px solid #ddd;
+						    	}
+						    	&:last-child {
+									border-right: 1px solid #ddd; 
+						    	}
+	
+	    }  
+	    .table tbody td { 
+	    	padding: 14px 24px; 
+
+	    	&:first-child {
+				border-left: 1px solid #ddd;
+	    	}
+	    	&:last-child {
+				border-right: 1px solid #ddd; 
+	    	}
+	    	
+	    	
+	    }
+	    .table tr {
+	    	&:last-child {
+	    		td {
+	    			margin-top: 10px; 
+	    			&:last-child {
+						border-right: 0; 
+			    	}
+	    		}
+	    	}
+	    }
+	    .t-body td {
+	    	height: 130px; 
+	    }
+
+	    .coupen td {
+			border-bottom: 1px solid #ddd; 
+	    }
+	    .total td {background: #fdec56; color: #000; font-weight: bold; border: 0 !important;  border-right: 0;   }
+
+	    footer {
+	    	
+	    	display: block;
+	    	margin-right: auto;
+	    	margin-left: auto;
+	    	text-align: center;
+			
+	    	.bnt-payment {
+		    	color: #0b009e;
+		    	text-decoration: underline;
+		    	font-size: 26px; 
+		    	text-align: center; 
+		    	
+
+	    	}
+	    	p  {
+	    		text-align: center;
+	    		max-width: 450px; 
+	    		margin-top: 16px;
+	    		font-size: 12px; 
+	    		color: #c0c0c0; 
+	    	}
+
+	    	.bnt-payment-paid {
+	    		color: #00920a;
+		    	text-decoration: none;
+		    	font-size: 24px; 
+		    	text-align: center; 
+	    	}
+
+	    }
+
+
+}
