--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1638,6 +1638,14 @@
 		a.blue-underline {display: inline-block; font-weight: bold; font-size: 14px; }
 
 	}
+	.remove {
+		 padding: 16px 20px;
+		 p {margin-bottom: 0; color: #59595a; font-size: 14px; display: inline-block; margin-right: 6px; font-weight: bold;  }
+		 a.blue-underline {display: inline-block; font-weight: bold; font-size: 14px; }
+		 .members {margin-top: 20px; padding-left: 10px }
+		span.bubble {color: #59595a; background: #f1f1f1; padding:4px 8px; border-radius: 10px; margin-bottom: 6px; font-weight: bold; font-size: 12px;     display: inline-block;     margin-right: 4px;}		
+	}
+	
 
 	#menuBarDiv, #statusbar {
 	    background-color: transparent !important; 
@@ -1679,6 +1687,7 @@
     		@include breakpoint ($lg) {
     			    height: 312px;	
     		}
-}
-	
+	}
+
+
 }
