--- a/sass/base/_globals.scss
+++ b/sass/base/_globals.scss
@@ -41,19 +41,18 @@
 	}
 
 
-	
 
 body {
-	font-family: 'AvenirLTStd';
+	 font-family: "proxima-nova",sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'AvenirLTStd-Light';
+	 font-family: "proxima-nova",sans-serif;
 
 }
 
 p, a {
-	font-family: 'AvenirLTStd';
+	 font-family: "proxima-nova",sans-serif;
 
 }
 
