--- a/sass/base/_globals.scss
+++ b/sass/base/_globals.scss
@@ -42,17 +42,32 @@
 
 
 
+// body {
+// 	 font-family: "proxima-nova",sans-serif;
+// }
+
+// h1, h2, h3, h4, h5, h6 {
+// 	 font-family: "proxima-nova",sans-serif;
+
+// }
+
+// p, a {
+// 	 font-family: "proxima-nova",sans-serif;
+
+// }
+
+
 body {
-	 font-family: "proxima-nova",sans-serif;
+	 font-family: "AvenirLTStd",sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	 font-family: "proxima-nova",sans-serif;
+	 font-family: "AvenirLTStd",sans-serif;
 
 }
 
 p, a {
-	 font-family: "proxima-nova",sans-serif;
+	 font-family: "AvenirLTStd",sans-serif;
 
 }
 
