--- a/sass/base/_globals.scss
+++ b/sass/base/_globals.scss
@@ -62,7 +62,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	 font-family: "AvenirLTStd",sans-serif;
+	 font-family: "AvenirLTStd-Light",sans-serif;
 
 }
 
