--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1045,8 +1045,8 @@
 			    vertical-align: middle;
 	  	  }
 	  	  
-	  	  .todo {margin-left: 12px; }
-	  	  a.notes {display: inline-block; font-size: 16px; color: #000; text-decoration: underline; }
+	  	  .todo {margin-left: 12px; margin-bottom: 10; }
+	  	  a.notes {display: inline-block; font-size: 16px; color: #000; }
 	  	  
 	  	 
 	  	  a.more { text-decoration: underline; color: #000; font-size: .8em; font-weight: bold;   }
