--- a/build-4/css/style.css
+++ b/build-4/css/style.css
@@ -9920,13 +9920,14 @@ z
 
 .ws__tasks .todo {
   margin-left: 12px;
+  margin-bottom: 10px;
 }
 
 .ws__tasks a.notes {
   display: inline-block;
   font-size: 16px;
   color: #000;
-  text-decoration: underline;
+ /* text-decoration: underline; */
 }
 
 .ws__tasks a.more {
