--- a/exchange/css/style.css
+++ b/exchange/css/style.css
@@ -1298,7 +1298,9 @@ a.logo {
   width: 38%;
 }
 .list-due__table .bubble {
-  padding: 3px 15px;
+  background: #ddd;
+  color: #000;
+  padding: 1px 8px;
   border-radius: 63px;
   min-width: 70px;
   display: inline-block;
@@ -1313,27 +1315,16 @@ a.logo {
 }
 
 .list-due__table__bubble {
-  padding: 3px 15px;
+  background: #ddd;
+  color: #000;
+  padding: 1px 8px;
   border-radius: 63px;
   min-width: 70px;
   display: inline-block;
   margin-bottom: 6px;
   margin-right: 2px;
-}
-
-.tbl__bubble--green {
-  background: #77e502;
-  color: #000;
-}
-
-.tbl__bubble--blue {
-  background: #4052fb;
-  color: #fff;
-}
-
-.tbl__bubble--red {
-  background: #692828;
-  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 #list-due-modal .modal-content {
