--- a/exchange/css/style.css
+++ b/exchange/css/style.css
@@ -1264,8 +1264,8 @@ a.logo {
   background: #4052fb;
   color: #fff;
 }
-.list-due .lable-mehndi {
-  background: #692828;
+.list-due .lable-red {
+  background: red;
   color: #fff;
 }
 
